work in progress

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,14 +13,14 @@
   "license": "SEE LICENSE IN <your-license-filename>",
   "repository": "<fill-your-repository-here>",
   "dependencies": {
-    "@dedis/kyber": "^3.0.1",
-    "@dedis/kyber-js": "0.0.10",
+    "@dedis/kyber": "^3.0.7",
     "@stablelib/blake2xs": "^0.10.4",
     "@types/crypto-js": "^3.1.43",
     "@types/node": "^10.12.30",
     "@types/sprintf-js": "^1.1.2",
     "buffer": "^5.2.1",
     "co": "^4.6.0",
+    "dexie": "^2.0.4",
     "isomorphic-ws": "^4.0.1",
     "lodash": "^4.17.11",
     "long": "^4.0.0",
@@ -45,6 +45,8 @@
     "tns-core-modules": "^5.2.2",
     "toml": "^3.0.0",
     "topl": "^0.3.1",
+    "tweetnacl": "^1.0.1",
+    "tweetnacl-ts": "^1.0.3",
     "underscore": "^1.9.1",
     "util": "^0.11.1"
   },
