*: try with npm install

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,9 @@ jobs:
     - name: webapp
       language: node_js
       node_js: 10
-      before_install: cd dynacred && npm ci && npm run build && cd ..
+      before_install: cd dynacred && npm ci && npm pack && cd ..
       install:
-        - cd dynacred && npm build && cd ..
-        - cd webapp && npm ci && npm link ../dynacred/dist && cd ..
+        - cd webapp && npm ci && npm install ../dynacred/dynacred*.tgz && cd ..
       before_script: cd webapp && npm run lint
       script:
         - ls node_modules/@c4dt/dynacred
