--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,9 @@ jobs:
     - name: webapp
       language: node_js
       node_js: 10
-      before_install: cd dynacred && npm ci && npm pack && cd ..
+      before_install: cd dynacred && npm ci && npm build && cd dist && npm pack && cd ../..
       install:
-        - cd webapp && npm ci && npm install ../dynacred/dynacred*.tgz && cd ..
+        - cd webapp && npm ci && npm install ../dynacred/c4dt-dynacred-*.tgz && cd ..
       before_script: cd webapp && npm run lint
       script:
         - ls node_modules/@c4dt/dynacred
